CAY-1912 BatchQueryBuilder refactoring
CAY-1913 Refactor org.apache.cayenne.access.trans into query-specific packages
CAY-1914 Refactor EJBQL-related translators to a standalone 'org.apache.cayenne.access.translator.ejbql' package
CAY-1915 BatchTranslator instead of performing bindings should return binding object whose values can be altered
CAY-1918 Replace Oracle LOB hacks with JDBC 4.0 API

Bug Fixes:

CAY-1480 Implement cross-db functional expressions
CAY-1695 Unexpected null value in bidirectional one-to-one prefetch 
CAY-1736 IllegalArgumentException when synchronizing entities in the Modeler
CAY-1796 ROP: All entity's to-many relationships getting faulted from database when using it as a parameter in qualifier expression
CAY-1797 NPE importing DataMap
CAY-1798 ROP: Reverse relationships of prefetched entity objects are not filled during server to client objects conversion
CAY-1799 ROP: Server can't deserialize LIKE expression with pattern already compiled
CAY-1818 Fix copyright year in the Modeler "about" panel
CAY-1834 Exception: ToManyList cannot be cast to DataObject 
CAY-1857 Problem with hotkeys 
CAY-1859 NullPointerException when importing EOModel 
CAY-1866 Change in General Modeler Preferences reverts old settings to default value
CAY-1868 Select contention with multiple contexts 
CAY-1869 ResultIterator from cayenne-client dependency is subclassed from org.apache.cayenne.access.ResultIterator which is present only in cayenne-server dependency 
CAY-1874 DB2 Procedure action ignores the first result set
CAY-1877 In-memory evaluation of expression may fail with UnsupportedOpeartionException depending on order of nodes
CAY-1880 objectStore snapshots never cleared from RefreshQuery when "use shared cache" unchecked
CAY-1881 CayenneModeler (Mac version) doesn't work with Java 7
CAY-1885 Null value in subclass's field.
CAY-1905 Multi-step prefetching NPE : 1..N..1 with absent N and root with no qualifier

----------------------------------
Release: 3.2M1